# pinentry-anyrun

./: Cargo.toml
src/: main.rs
