[package]
name = "pinentry-anyrun"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
async-std = {version = "1.12.0", features = ["attributes"]}
async-process = "2.2.3"
ron = "0.8"
serde = { version = "1.0.151", features = ["derive"] }
percent-encoding-rfc3986 = "0.1.3"
assuan_rs = "0.0.1"
clap = { version = "4.2.7", features = ["derive"] }
